--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "rimraf dist && tsc",
     "start": "node dist/server.js",
-    "seed-admin": "node --loader ts-node/esm src/seed-admin.ts",
+    "seed-admin": "ts-node src/seed-admin.ts",
     "lint": "tsc --noEmit"
   },
   "keywords": [],
@@ -41,6 +41,6 @@
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.9.3"
   }
 }
