--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.48.0",
+    "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -29,6 +30,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
