--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
+    "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.9.36"
   }
 }
